# NUCLEUS

./: README.md  convert.py  pyproject.toml
bubbleformer/: modules.py
bubbleformer/config/model_cfg/: neighbor_moe_fluid_embed1.yaml
examples/: data_visualization.ipynb
nucleus/: modules.py  test.py
nucleus/config/: default.yaml
nucleus/config/data_cfg/: poolboiling.yaml
nucleus/data/: batching.py  dataset.py  downsampled_dataset.py
nucleus/layers/: fluid_param_embedding.py  space_time_attention.py  transformer_block.py
nucleus/models/: bubbleformer_vit.py  moe.py  neighbor_moe_fluid_embed.py  vit.py
nucleus/utils/: physical_metrics.py
scripts/: inf.py  inf_one_step.py  train.py  viz_attention_probs.py
